<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/labelSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/search"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearchArticles"
        style="@style/ButtonStyle"
        android:text="@string/search_articles"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSearch" />

    <TextView
        android:id="@+id/labelPopular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="start"
        android:text="@string/popular"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearchArticles" />

    <Button
        android:id="@+id/btnMostViewed"
        style="@style/ButtonStyle"
        android:text="@string/most_viewed"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPopular" />

    <Button
        android:id="@+id/btnMostShared"
        style="@style/ButtonStyle"
        android:text="@string/most_shared"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMostViewed" />

    <Button
        android:id="@+id/btnMostEmailed"
        style="@style/ButtonStyle"
        android:text="@string/most_emailed"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMostShared" />

</androidx.constraintlayout.widget.ConstraintLayout>